Adding favicon to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://openmoji.org/data/color/svg/1FAB2.svg" type="image/x-icon">
     <title>Conversor .dlens para .csv</title>
     <link rel="stylesheet" href="style.css">
 </head>
