--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <link rel="icon" href="https://openmoji.org/data/color/svg/1FAB2.svg" type="image/x-icon">
     <title>Conversor .dlens para .csv</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="author" content="od3zza" />
+    <meta name="description"
+        content="." />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Theme Color - https://goo.gl/qRE0vM -->
+    <meta name="theme-color" content="#ffffff" />
 </head>
+    <!--
+          )      (\_
+         ((    _/{  "-;
+          )).-' {{ ;'`
+HEY U!   ( (  ;._ \\      -->
 <body>
 
     <div class="container">
