Add animated galaxy background (canvas + CSS + JS); translate UI text to English

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
+    <!-- Full-screen animated galaxy background -->
+    <canvas id="bg-canvas" aria-hidden="true"></canvas>
 
     <div class="container">
     <h1>Database Converter (.dlens) to CSV</h1>
@@ -24,13 +26,13 @@
         
         <div class="progress-info">
             <span>Goal</span>
-            <span id="progress-text">$100</span>
+            <span id="progress-text"> $100</span>
         </div>
         <div class="progress-bar-container">
             <div id="progress-bar-fill" style="width: 14%;"></div>
         </div>
         
-        <a href="https://www.paypal.com/donate" target="_blank" class="donate-button">
+        <a href="https://ko-fi.com/od3zza" target="_blank" class="donate-button">
             Make a Donation
         </a>
     </div>
