--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <input type="file" id="db-upload" accept=".dlens">
     <button id="convert-btn" disabled>Convert to CSV</button>
     <div id="status">Please select a .dlens file</div>
+    <br />
+    <p style="font-size: 12px;">Coded by od3zza 👾</p>
     </div>
 
     <div id="donation-popup" class="popup-hidden">
@@ -40,5 +42,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.3/sql-wasm.js"></script>
     <script src="script.js"></script>
+    <footer>
+           
+          </footer>
+
 </body>
 </html>
