--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <canvas id="bg-canvas" aria-hidden="true"></canvas>
 
     <div class="container">
-    <h1>Database Converter (.dlens) to CSV</h1>
+    <h1>Database Delver Lens Converter (.dlens) to CSV</h1>
     <input type="file" id="db-upload" accept=".dlens">
     <button id="convert-btn" disabled>Convert to CSV</button>
     <div id="status">Please select a .dlens file</div>
+    <div style="margin-top:12px; display:flex; gap:8px; justify-content:center;">
+        <button id="howto-btn" class="secondary">How to use</button>
+    </div>
     <br />
     <p style="font-size: 12px;">Coded by od3zza 👾</p>
     </div>
@@ -42,6 +45,20 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.3/sql-wasm.js"></script>
     <script src="script.js"></script>
+    <!-- How-to modal -->
+    <div id="howto-modal" class="modal-hidden" aria-hidden="true">
+        <div class="modal-backdrop"></div>
+        <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="howto-title">
+            <button id="howto-close" class="modal-close" aria-label="Close">&times;</button>
+            <h2 id="howto-title">How to use</h2>
+            <ol>
+                <li>Open your Delver Lens app and create a backup file (<strong>Create Backup File</strong>).</li>
+                <li>Download the .dlens backup and bring it here with the <strong>Select file</strong> control.</li>
+                <li>Click <strong>Convert to CSV</strong>. The conversion will run in your browser and the CSV download will start automatically.</li>
+            </ol>
+            <p>Note: the .dlens file must be a valid SQLite database compatible with the query used by this tool.</p>
+        </div>
+    </div>
     <footer>
            
           </footer>
