--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body> 
-    <!-- Full-screen animated galaxy background -->
+    <!-- animated galaxy background -->
     <canvas id="bg-canvas" aria-hidden="true"></canvas>
 
     <div class="container">
@@ -21,6 +21,7 @@
     </div>
     <br />
     <p style="font-size: 12px;">Coded by od3zza 👾</p>
+    <p style="font-size: 12px;">Suggestions or issues <a href="https://github.com/od3zza/delvertocsv/issues">here</a></p>
     </div>
 
     <div id="donation-popup" class="popup-hidden">
@@ -45,7 +46,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.3/sql-wasm.js"></script>
     <script src="script.js"></script>
-    <!-- How-to modal -->
+    <!-- how-to modal -->
     <div id="howto-modal" class="modal-hidden" aria-hidden="true">
         <div class="modal-backdrop"></div>
         <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="howto-title">
