--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@ HEY U!   ( (  ;._ \\      -->
         </div>
     </div>
     <footer>
-           
+            <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=44bd9bce0b15d50c450d8cc931db0c20baa41289'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1393711/t/3"></script>
           </footer>
 
 </body>
