--- a/index.html
+++ b/index.html
@@ -84,12 +84,13 @@ HEY U!   ( (  ;._ \\      -->
                 <li>Download the .dlens backup and bring it here with the <strong>Select file</strong> control.</li>
                 <li>Click <strong>Convert to CSV</strong>. The conversion will run in your browser and the CSV download will start automatically.</li>
             </ol>
-            
+            <br /><br />
+             <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=44bd9bce0b15d50c450d8cc931db0c20baa41289'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1393711/t/3"></script>
         </div>
     </div>
     <footer>
-            <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=44bd9bce0b15d50c450d8cc931db0c20baa41289'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1393711/t/3"></script>
+          
           </footer>
 
 </body>
